# testExplore

./: .env.example  .env.txt  .eslint-report.json  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  README.md  README_MIGRATION.txt  TODO.md  UPDATE_STATUS.md  code review chatgpt.md  codegen.ts  eslint-report.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.preview.config.ts  stats.html  tailwind.config.js  tanstack_table_readme.md  test-block-pagination.js  tsconfig.base.json  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  utputFormat  vite.config.ts  vite.config.ts.timestamp-1757927901082-a17240cc480fc.mjs  vitest.config.ts
.claude/: settings.local.json
aggregator/: .gitignore  README.md  package-lock.json  package.json  run-cron-icp.cmd  tsconfig.json
docker/: .env.example  .env.fast  COUNT_QUERIES_USAGE.md  HASURA_QUERIES.md  INDEXER_UPDATE_PLAN.md  QUERY_ANALYSIS.md  README.md  SCHEMA_PLAN.md  docker-compose.fast.yml  docker-compose.prod.yml  docker-compose.yml  hasura-metadata.json  hasura-metadata.sql  hasura-view.sql  init.sql  pgadmin-servers.json  postgres-fast.conf  seed-nft-swap.sql  seed.sql  track-relationships.json  track-tables.json
docs/: aggregator-api.yaml
icp-assets/: canister.json  canister_ids.json
icp-onchain/: Cargo.toml  ICP-SETUP.md  canister_ids.json  dfx.json
icp-onchain/src/reef_metrics_onchain/: Cargo.toml  reef_metrics_onchain.did
icp-onchain/src/reef_metrics_onchain/src/: lib.rs
src/: App.css  App.tsx  index.css  (+5 more)
(+233 files in other folders)
