[package]
name = "reef_metrics_onchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-cdk-timers = "0.6"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
ic-certified-map = "0.4"
base64 = "0.21"
serde_cbor = "0.11"
sha2 = "0.10"
